src/main.css
@import 'reset.css'

html, body {
 margin: 0;
 padding: 0;
 color: white;
 background: transparent;
}

body {
	background: url('https://dl.dropboxusercontent.com/s/quaxsr8vn3hdi9e/background.jpg?dl=0') no-repeat;
	background-size: cover;
}

ul {
	display: inline;
	list-style-type: none;
}

a {
	text-decoration: none;
}

#title-container {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	white-space: nowrap;
	background: transparent;
}

.title {
	color: #a100c1;
	font-style: bold;
	font-size: 5em;
    text-shadow: 0 1px 0 #000,
           0 2px 0 #111,
           0 3px 0 #222,
           0 4px 0 #333,
           0 5px 0 #444,
           0 6px 1px rgba(0,0,0,.1),
           0 0 5px rgba(0,0,0,.1),
           0 1px 3px rgba(0,0,0,.3),
           0 3px 5px rgba(0,0,0,.2),
           0 5px 10px rgba(0,0,0,.25),
           0 10px 10px rgba(0,0,0,.2),
           0 20px 20px rgba(0,0,0,.15);
}

#container {
	margin-left: auto;
	margin-right: auto;
	width: 1150px;
	height: 650px;
	background: transparent;
}

.game-container {
	width: 95%;
	height: 100%;
	background: url('https://dl.dropboxusercontent.com/s/yfg0jkm338hriyq/axiom.png?dl=0') no-repeat center;
	margin-left: auto;
	margin-right: auto;
}
.game-info {
	margin-left: 30%;
	width: 75%;
	height: 25%;
	font-size: 4em;
	font-style: bold;
	color: yellow;
	background: transparent;
}

.game-board {
	margin-left: 350px;
	padding-left: 50px;
	width: 55%;
	height: 55%;
	display: inline-block;
}

.game-counters > li {
	float: left;
	margin: 5px 10px 0 5px;
}

.game-counters >li:first-child {
	margin-top: -20px;
	font-size: 1.65em;
	color: red;
	font-style: bold;
	font-family: helvetica;
}

.game-counters >li:nth-child(2) {
	margin-right: 225px;
}

button, .start-button{
	background: transparent;
	padding: 5px;
	opacity: .4;
	font-style: bold;
	margin: -25px 0px 0px 115px;
	color: gray;
	border: 0px !important;
	cursor: pointer;
	float: right;
	font-size: 1.6em;
}

button:focus {outline:0;}
button:hover {color: #00ff00; opacity: 1;}

.walle-counter {
	width: 90px;
	border-radius: 50%;
	position: absolute;
	margin-left: -105px;
	margin-top: -10px;

}

.win-modal {
	background: black;
	margin-top: -25px;
	opacity: .7;
	width: 500px;
	height: 300px;
	position: absolute;
	z-index: 1000;
	border-radius: 15px;
	border: 1px solid purple;
	visibility: visible;
}

.win {
	font-size: 5em;
	color: #00FF00;
	text-align: center;
	vertical-align: center;
	opacity: 2;
}

.info {
	vertical-align: bottom;
	background: transparent;
}

.about {
	font-size: 1em;
	color: white;
	opacity: .4;
	font-style: italic;
	float:left;
}

.about:hover {opacity: .9;}

.copyright {
	float: right;
	font-size: .8em;
	opacity: .4;
}

.pixar {
	color: purple;
	font-size: .8;
}

.pixar:hover {
	color: white;
	opacity: 2;
}

